# DIT-Scripts

./: .bash_aliases  .gitignore  .gitmodules  00-pre-installation.sh  10-conky_setup.sh  10-motd_setup.sh  10-user_setup.sh  15-user_preference.sh  20-env_setup.sh  99-dit-news  DIT-Logger  DIT.desktop  LICENSE  Login-Launch  README.md  conky_setup.sh  env_reset.sh  env_setup.sh  motd_setup.sh  user_setup.sh
.arduino/Battery_watchdog/: Battery_watchdog.ino  Serial.sh
.arduino/Battery_watchdog/data/: index.html  script.js  style.css
.arduino/Ladybug/: Ladybug.ino
.config/autostart/: .desktop
.config/conky/: conky_entry.sh  ssh_connections.sh
.config/conky/conky-esp-config/: .conky_esp32  battery_watchdog.sh  conky_esp32.sh
.config/conky/conky-esp-config/10-battery_watchdog/: battery_watchdog.sh  shutdown_message.txt
.config/conky/conky-esp-config/10-network_watchdog/: network_watchdog.sh
.config/conky/lean-conky-config/: local.conf
.config/conky/lean-conky-config/lib/components/: core.lua
.github/ISSUE_TEMPLATE/: udev-rules-change-request.yaml
.mozilla/firefox/dit_config.default/: prefs.js
app/esp_daemon/: .env  Dockerfile  docker-compose.yaml  entrypoint.sh
app/esp_daemon/arduino/ESP_Daemon/: platformio.ini
app/esp_daemon/arduino/ESP_Daemon/data/: index.html  script.js  style.css
app/esp_daemon/arduino/ESP_Daemon/include/: config.h
app/esp_daemon/arduino/ESP_Daemon/lib/comm/: espnow_comm.cpp  espnow_comm.h
app/esp_daemon/arduino/ESP_Daemon/lib/led_control/: led_control.cpp  led_control.h
app/esp_daemon/arduino/ESP_Daemon/lib/ros_node/: ros_node.cpp  ros_node.h
app/esp_daemon/arduino/ESP_Daemon/lib/sensors/: voltmeter.cpp
app/esp_daemon/arduino/ESP_Daemon/lib/web_server/: web_server.cpp
app/esp_daemon/arduino/ESP_Daemon/lib/wifi_config/: wifi_config.cpp
app/esp_daemon/arduino/ESP_Daemon/src/: main.cpp  main.cpp.example
app/robot_status_bridge/: .env  Dockerfile  docker-compose.yaml  entrypoint.sh
app/robot_status_bridge/robot_status_br/src/battery_monitor/: CMakeLists.txt  package.xml
app/robot_status_bridge/robot_status_br/src/battery_monitor/src/: battery_publisher.cpp  battery_subscriber.cpp
app/robot_status_bridge/robot_status_br/src/robot_status_monitor/: CMakeLists.txt  package.xml
app/robot_status_bridge/robot_status_br/src/robot_status_monitor.bak/: CMakeLists.txt  package.xml
app/robot_status_bridge/robot_status_br/src/robot_status_monitor.bak/src/: robot_status_subscriber.cpp
app/robot_status_bridge/robot_status_br/src/robot_status_monitor/launch/: robot_status.launch
app/robot_status_bridge/robot_status_br/src/robot_status_monitor/msg/: RobotStatus.msg
app/robot_status_bridge/robot_status_br/src/robot_status_monitor/src/: robot_status_node.cpp  robot_status_publisher.cpp  robot_status_subscriber.cpp
app/voice_control/: .env  Dockerfile  docker-compose.yaml  entrypoint.sh
app/voice_control/voice_control_ws/src/voice_nav/: package.xml  setup.cfg  setup.py
app/voice_control/voice_control_ws/src/voice_nav/voice_nav/: speech_to_nav.py
desktop/: DIT.desktop  ESP-Daemon.desktop  blue.desktop  localization.desktop  main.desktop  nav.desktop  remove.desktop  rm-main.desktop  rm-nav.desktop  run.desktop  yellow.desktop
share/eurobot_2024/data/: group.json  state.json  usb.json
share/scripts/: blue.run  ladybug.sh  localization.run  localization.sh  main.run  main.sh  nav.run  nav.sh  remove.sh  rm-main.sh  rm-nav.sh  run.sh  yellow.run
udev/: 80-calibration.rules  80-dit.rules  99-vive.rules.bak
web/: update-submodules.sh
web-ui/: Dockerfile  app.py  docker-compose.yaml  eurobot2024.appcache  requirements.txt
web-ui/data/: state.json  state.yaml
web-ui/scripts/: aio.sh  check_devices.sh  voltage.sh
web-ui/static/: script.js  styles.css
web-ui/templates/: index.html
web/app/Eurobot_2025_Web/: index.html  script.js  styles.css
web/config/: xbox.config.yaml
web/docker/: .bashrc  .env  Dockerfile  docker-compose.yaml  entrypoint.sh
