<?xml version="1.0"?>
<package format="3">
  <name>robot_status_monitor</name>
  <version>0.1.0</version>
  <description>Monitor robot status</description>
  <maintainer email="scx@gapp.nthu.edu.tw">SeanChangX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>