<?xml version="1.0"?>
<package format="3">
  <name>robot_status_monitor</name>
  <version>0.0.1</version>
  <description>Monitor robot status including battery, CPU usage, and RAM usage.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- 必須放在這裡，而不是 <export> 裡！ -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
