<?xml version="1.0"?>
<package format="3">
  <name>robot_status_monitor</name>
  <version>0.1.0</version>
  <description>Monitor robot status including battery, CPU usage, RAM usage, and network status.</description>
  <maintainer email="scx@gapp.nthu.edu.tw">SeanChangX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      <launch_file>launch/robot_status.launch</launch_file>
    </launch>
  </export>
</package>