<package format="3">
  <name>voice_nav</name>
  <version>0.0.2</version>
  <description>Voice-controlled navigation</description>
  <maintainer email="scx@gapp.nthu.edu.tw">SeanChangX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
